syntax = "proto3";
package irismod.service;

import "gogoproto/gogo.proto";
import "irismod/service/service.proto";

option go_package = "mods.irisnet.org/service/types";

// GenesisState defines the service module's genesis state
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated ServiceDefinition definitions = 2 [ (gogoproto.nullable) = false ];
  repeated ServiceBinding bindings = 3 [ (gogoproto.nullable) = false ];
  map<string, string> withdraw_addresses = 4;
  map<string, RequestContext> request_contexts = 5;
}